timeouting gesture cb